# student-attendance-manager

./: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
app/: __init__.py  commands.py  db.py  logger_config.py  models.py  repositories.py  schemas.py  services.py
app/migrations/versions/: b6e41e12e424_initial_migration_to_create_students_.py
tests/: test_commands.py  test_models.py  test_repositories.py  test_schemas.py  test_services.py
